text overflow fixed and line removed

--- a/src/components/topbar/style.less
+++ b/src/components/topbar/style.less
@@ -99,7 +99,7 @@
             .tabList {
                 border-bottom: 1px solid #eaeaea;
                 .tab {
-                    box-shadow: inset 0 -2px 0 #8641f2;
+                    box-shadow: inset 0 0 0 #8641f2;
                     height: 40px;
                     border: none;
                     background: transparent;
@@ -235,7 +235,10 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        max-width: 90px;
+        max-width: 130px;
+    }
+    .overflowTextName {
+        max-width: 150px;
     }
 }
 
